Bug 263600 - sending certificates by mail doesn't work
Summary: sending certificates by mail doesn't work
Status: CLOSED FIXED
Alias: None
Product: Kleopatra Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-19 02:06 UTC by Marcus Brinkmann
Modified: 2011-01-27 16:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcus Brinkmann 2011-01-19 02:06:02 UTC
Version:           unspecified (using Devel) 
OS:                Windows CE

after certificate generation, I am offered to send the certificate by mail.  this button shows a warning that sending attachment with default mailer may not work, and then does nothing.  I can continue with the main program.

If it doesn't work, the button should probably be removed.

Reproducible: Always
Comment 1 Andreas Holzammer 2011-01-19 15:35:51 UTC
commit 6ae1d302d8f95a6404b428c650fcc4cff027ea2d
branch master
Author: Andreas Holzammer <andreas.holzammer@kdab.com>
Date:   Wed Jan 19 15:26:33 2011 +0100

    take out mail sending for mobile
    it does not work for wince, so take it out.
    
    BUG:263600

diff --git a/kleopatra/newcertificatewizard/newcertificatewizard.cpp b/kleopatra/newcertificatewizard/newcertificatewizard.cpp
index 55af7fb..d4ad4f2 100644
--- a/kleopatra/newcertificatewizard/newcertificatewizard.cpp
+++ b/kleopatra/newcertificatewizard/newcertificatewizard.cpp
@@ -649,8 +649,14 @@ namespace {
             ui.uploadToKeyserverPB      ->setVisible(  pgp() );
             ui.makeBackupPB             ->setVisible(  pgp() );
             ui.createRevocationRequestPB->setVisible(  pgp() && false ); // not implemented
-            ui.sendRequestByEMailPB     ->setVisible( !pgp() );
+            
+#ifdef KDEPIM_MOBILE_UI
+            ui.sendCertificateByEMailPB ->setVisible(  false );
+            ui.sendRequestByEMailPB     ->setVisible(  false );
+#else
             ui.sendCertificateByEMailPB ->setVisible(  pgp() );
+            ui.sendRequestByEMailPB     ->setVisible( !pgp() );
+#endif
 
             if ( !error && !pgp() ) {
                 if ( signingAllowed() && !encryptionAllowed() )