take out mail sending for mobile it does not work for wince, so take it out.

BUG:263600